[package]
name = "myprogram"
version = "0.1.1"
authors = ["robisys"]

#[lib]
#name = "mylib"
#path = "src/lib.rs"
#test = true
#doc = true

#[[bin]]
#name = "myprog"
#path =  "src/myprog.rs"

#[[bin]]
#name = "bin1"
#path =  "src/bin1.rs"


[[bin]]
name = "cargo-wist"
path =  "src/bin/wist/main.rs"



[dependencies]
#myprogs = {git = "https://github.com/robisys/myprogs.git"}

#cargo = "*"
#hyper = "*"
#nickel = "*"

cargo-edit = "0.1.2"
docopt = "0.6"
pad ="0.1"
rustc-serialize = "0.3"
semver = "0.1"
toml = "0.1"
#curl = "0.2.16"
quick-error = "0.1.3"
clippy = {version = "0.0.29" , optional = true}

[dev-dependencies]
tempdir = "0.3"
assert_cli = "0.2.0"

[target.x86-64-pc-windows-gnu.dependencies]
curl = "0.2.16"


